isolation web <> le reste

--- a/web/ou_se_retrouver.html
+++ b/web/ou_se_retrouver.html
@@ -16,7 +16,7 @@
         html, body {
             height: 100%;
             margin: 0;
-            font-family: Sans Serif
+            font-family: Sans-Serif
         }
         #bandeau {
             position: relative;
